--- a/school_vue/public/index.html
+++ b/school_vue/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>school_vue</title>
+    <title>高校课程管理系统</title>
   </head>
   <body>
     <noscript>
